logs/Slang/generated/yosys/simple_memory.sv.log
name: simple_memory
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/memory.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/memory.v:39:40: error: expected identifier
module memtest02(clk, setA, setB, addr, bit, y1, y2, y3, y4);
                                       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/memory.v:39:41: error: expected non-ansi port declaration
module memtest02(clk, setA, setB, addr, bit, y1, y2, y3, y4);
                                        ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/memory.v:43:12: error: expected declarator
input [2:0] bit;
           ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/memory.v:43:16: error: expected declarator
input [2:0] bit;
               ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/memory.v:69:19: error: expected expression
	y1 <= mem1[addr][bit];
	                 ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/memory.v:70:19: error: expected expression
	y2 <= mem2[addr][bit];
	                 ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/memory.v:73:24: error: expected expression
assign y3 = mem1[addr][bit];
                       ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/memory.v:74:24: error: expected expression
assign y4 = mem2[addr][bit];
                       ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/memory.v:140:40: error: redefinition of 'rst'
module memtest06_sync(input clk, input rst, input [2:0] idx, input [7:0] din, output [7:0] dout);
                                       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/memory.v:141:33: note: previous definition here
    (* gentb_constant=0 *) wire rst;
                                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/memory.v:159:41: error: redefinition of 'rst'
module memtest06_async(input clk, input rst, input [2:0] idx, input [7:0] din, output [7:0] dout);
                                        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/memory.v:160:33: note: previous definition here
    (* gentb_constant=0 *) wire rst;
                                ^
